--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,5 @@
 $custom_color: (
-    prime_bg: #EAF4F4,
+    prime_bg: rgb(244, 244, 234),
     sec_bg: #FFF,
     nav_text: #232D41,
     accent: rgb(251, 236, 150)
@@ -69,7 +69,7 @@ nav{
                 font-size: 1.1875rem;
             }
             a:hover{
-                color: color(accent);
+                color: black;
             }
         }
     }
@@ -95,6 +95,9 @@ nav{
         li{
             a{
                 color: color(nav_text);
+            }
+            a:hover{
+                color: color(accent);
             }
         }
         
@@ -130,24 +133,157 @@ main{
     z-index: 0;
 }
 
+
+
+
+// css for Events Section
+
 #events{
     position: relative;
     top: 100vh;
     height: 100vh;
     width: 100%;
-    background-color: #EAF4F4;
+    background-image: radial-gradient(circle, rgb(209, 186, 154),color(prime_bg));
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
+.main_events{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px 0 10px 0;
+    .event_container_bottom{
+        padding-top: 55px;
+    }
+
+    .event_container_top, .event_container_bottom{
+        display: flex;
+        justify-content: space-between;
+        .cultural_overlay, .technical_overlay, .gaming_overlay,.sports_overlay{
+            height: 45vh;
+            cursor: pointer;
+            img{
+                height: 45vh;
+                border-radius: 45vh;
+            }
+            .cultural_text_div, .technical_text_div, .gaming_text_div, .sports_text_div{
+                position: absolute;
+                top: 50%;
+                    left: 50%;
+                    -webkit-transform: translate(-50%, -50%);
+                    -ms-transform: translate(-50%, -50%);
+                    transform: translate(-50%, -50%);
+                height: 80px;
+                width: 240px;
+                opacity: 0;
+                transition: .5s ease;
+                .cultural_text, .technical_text, .gaming_text, .sports_text{
+                    color: black;
+                    width: 100%;
+                    font-size: 2.5rem;
+                    font-family: 'Lemonada', cursive;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    -webkit-transform: translate(-50%, -50%);
+                    -ms-transform: translate(-50%, -50%);
+                    transform: translate(-50%, -50%);
+                    text-align: center;
+                }
+            }
+        }
+        .cultural_overlay:hover .cultural_text_div, .technical_overlay:hover  .technical_text_div, .gaming_overlay:hover .gaming_text_div,.sports_overlay:hover  .sports_text_div{
+            opacity: 1;
+        }
+        img:hover{
+            box-shadow: 0 1px 1px rgba(0,0,0,0.19), 0 1px 1px rgba(0,0,0,0.23);
+            opacity: 0.7;
+        }
+    }
+
+}
+#modal{
+    display: none;
+    position:fixed;
+    z-index: 1;
+    left: 0;
+    top:0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(185, 145, 90, 0.8);
+    justify-content: center;
+    align-items: center;
+    
+}
+.modal_content{
+    background-color: color(prime_bg);
+    margin: 20% auto;
+    padding: 20px;
+    width: 70%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.19), 0 7px 20px 0 rgba(0,0,0,0.17);
+    animation-name: modalopen;
+    animation-duration: 1s;
+
+}
+.close_btn{
+    background-color: white;
+    float: right;
+    margin-right: -35px;
+    margin-top: -35px;
+    width: 30px;
+    font-size: 28px;
+    text-align: center;
+    height: 30px;
+    border-radius: 30px;
+    color: rgb(218, 202, 152);
+}
+
+.close_btn:hover, .close_btn:focus{
+    color: rgb(104, 82, 18);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+@keyframes modalopen{
+    from{opacity: 0;}
+    to{opacity: 1;}
+}
+
+
+
+
+
+
+// css for Gallery Section
+
 #gallery{
     position: relative;
     top: 100vh;
     height: 100vh;
     width: 100%;
-    background-color: #1245FF;
+    background-image: linear-gradient(to bottom, color(prime_bg), rgb(209, 186, 154));
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 #contacts{
     position: relative;
     top: 100vh;
@@ -156,6 +292,92 @@ main{
     
     background-color: #11FF74;
 }
+
+
+
+
+
+
+
+
+  
+/* css for Developers section */
+#developers{
+    position: relative;
+    top: 100vh;
+    height: 441px;
+    max-height: 441px;
+    width: 100%;
+    z-index:0;
+    background-color: #EAF4F4;
+    background-attachment: fixed;
+    background-position: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.card {
+    height: 200px;
+    width: 600px;
+    box-shadow: 0 1px 2px 0 rgba(0,0,0,.15);
+    transition: all .2s ease-in-out;
+    display:/*box-shadow: 0 5px 22px 0 rgba(0,0,0,.25);*/ flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card:hover {
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.image {
+height: 200px;
+width: 200px;
+
+opacity: .8;
+overflow: hidden;
+transition: all .2s ease-in-out;
+}
+
+.image:hover,
+.card:hover .image {
+height: 200px;
+opacity: 1;
+}
+.image > img{
+    width: 200px;
+}
+
+.text {
+    height: 200px;
+    font-family: Arial, Helvetica, sans-serif;
+    width:400px;
+    padding:10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.social_link{
+    display: flex;
+    width: 180px;
+    flex-direction: row;
+    justify-content: space-between;
+    img{
+        height:32px;
+        widht:32px;
+    }
+}
+
+
+
+
+
+
 
 
 #logo{
@@ -260,136 +482,3 @@ rect{
 
 
 
-  
-/* css for Developers */
-#developers{
-    position: relative;
-    top: 100vh;
-    height: 441px;
-    max-height: 441px;
-    width: 100%;
-    z-index:0;
-    background-color: #EAF4F4;
-    background-attachment: fixed;
-    background-position: center;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.card {
-    height: 200px;
-    width: 600px;
-    box-shadow: 0 1px 2px 0 rgba(0,0,0,.15);
-    transition: all .2s ease-in-out;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.card:hover {
-/*box-shadow: 0 5px 22px 0 rgba(0,0,0,.25);*/
-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-
-}
-
-.image {
-height: 200px;
-width: 200px;
-
-opacity: .8;
-overflow: hidden;
-transition: all .2s ease-in-out;
-}
-
-.image:hover,
-.card:hover .image {
-height: 200px;
-opacity: 1;
-}
-.image > img{
-    width: 200px;
-}
-
-.text {
-    height: 200px;
-    font-family: Arial, Helvetica, sans-serif;
-    width:400px;
-    padding:10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    
-}
-
-.social_link{
-    display: flex;
-    width: 180px;
-    flex-direction: row;
-    justify-content: space-between;
-    img{
-        height:32px;
-        widht:32px;
-    }
-}
-
-
-.main_events{
-    width: 70%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 10px 0 10px 0;
-    .event_container_bottom{
-        padding-top: 55px;
-    }
-
-    div{
-        display: flex;
-        justify-content: space-between;
-        .cultural_overlay, .technical_overlay, .gaming_overlay,.sports_overlay{
-            height: 45vh;
-            cursor: pointer;
-            img{
-                height: 45vh;
-                border-radius: 45vh;
-            }
-            .cultural_text_div, .technical_text_div, .gaming_text_div, .sports_text_div{
-                position: absolute;
-                top: 50%;
-                    left: 50%;
-                    -webkit-transform: translate(-50%, -50%);
-                    -ms-transform: translate(-50%, -50%);
-                    transform: translate(-50%, -50%);
-                height: 80px;
-                width: 240px;
-                opacity: 0;
-                transition: .5s ease;
-                .cultural_text, .technical_text, .gaming_text, .sports_text{
-                    color: black;
-                    width: 100%;
-                    font-size: 2.5rem;
-                    font-family: 'Lemonada', cursive;
-                    position: absolute;
-                    top: 50%;
-                    left: 50%;
-                    -webkit-transform: translate(-50%, -50%);
-                    -ms-transform: translate(-50%, -50%);
-                    transform: translate(-50%, -50%);
-                    text-align: center;
-                }
-            }
-        }
-        .cultural_overlay:hover .cultural_text_div, .technical_overlay:hover  .technical_text_div, .gaming_overlay:hover .gaming_text_div,.sports_overlay:hover  .sports_text_div{
-            opacity: 1;
-        }
-        img:hover{
-            box-shadow: 0 1px 1px rgba(0,0,0,0.19), 0 1px 1px rgba(0,0,0,0.23);
-
-        }
-    }
-
-}
