jquery dependency removed.

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 html {
   overflow: scroll;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
@@ -125,6 +126,38 @@ main {
   position: fixed;
   top: 0;
   z-index: 1;
+}
+
+#landing .social_media {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 140px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#landing .social_media .facebook, #landing .social_media .insta {
+  width: 35px;
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
+}
+
+#landing .social_media .youtube {
+  width: 40px;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
 }
 
 #logo {
